--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             text-align: center;
             padding-bottom: 20px;
             border-bottom: 1px solid #EEEEEE;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .details {
@@ -99,7 +102,8 @@
 
     <main class="main" style="width: 85%;">
         <div class="img-wrapper">
-            <img src="logo.svg" style="width: 35px; text-align: center;" alt="">
+            <img src="logo.svg" style="width: 35px; text-align: center;margin-right: auto;" alt="">
+            <img src="qrcode.png" style="width: 60px; margin-right: auto;" alt="">
         </div>
         <div class="details">
             <div class="details-item" style="display: flex; align-items: center; justify-content: space-between;">
